--- a/app/src/main/res/layout/activity_bio_sensor.xml
+++ b/app/src/main/res/layout/activity_bio_sensor.xml
@@ -30,5 +30,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="153dp"
+        android:layout_height="127dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.342"
+        app:srcCompat="?android:attr/fingerprintAuthDrawable"
+        app:tint="@color/white" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
